--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "date-fns": "^1.29.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
-    "semantic-ui-react": "^0.80.0"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
