--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "date-fns": "^1.29.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-spring": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
