--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
+    "react-spinners": "^0.3.2",
     "react-spring": "^5.1.4"
   },
   "scripts": {
