--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "dependencies": {
     "date-fns": "^1.29.0",
+    "mobx": "^4.3.0",
+    "mobx-react": "^5.1.2",
+    "mobx-react-devtools": "^5.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
